[package]
name = "keyripper"
version = "0.1.2"
edition = "2021"

[dependencies]
dotenv = "0.15"
env_logger = "0.11.5"
log = "0.4.22"
tokio = { version = "1.39.2", features = ["rt", "rt-multi-thread", "macros"] }
sys-info = "0.9"
num_cpus = "1.13"
rand = "0.8"
libsecp256k1 = "0.7.1"
bitcoin = "0.32.2"
secp256k1 = "0.29.0"
k256 = "0.14.0-pre.0"
hex = "0.4.3"
num-bigint = "0.4.6"
num-traits = "0.2.19"