[package]
name = "keyripper"
version = "0.3.0"
edition = "2021"

[build]
rustflags = ["-Clinker=rust-lld"]

[dependencies]
dotenv = "0.15"
env_logger = "0.11.5"
log = "0.4.22"
tokio = { version = "1.39.3", features = ["rt", "rt-multi-thread", "macros"] }
sys-info = "0.9"
num_cpus = "1.13"
serde_json = "1.0"
rand = "0.8.5"
hex = "0.4.3"
bitcoin = "0.32.2"
secp256k1 = "0.29.0"
k256 = "0.14.0-pre.0"
libsecp256k1 = "0.7.1"
num-bigint = { version = "0.4.6", features = ["rand"] }
num-traits = "0.2.19"
serde = { version = "1.0.208", features = ["derive"] }
reqwest = { version = "0.12.7", features = ["json"] }